--- a/votingbash/package.json
+++ b/votingbash/package.json
@@ -32,6 +32,7 @@
     "rate-limit-redis": "^4.3.1",
     "redis": "^5.10.0",
     "uuid": "^9.0.1",
-    "validator": "^13.11.0"
+    "validator": "^13.11.0",
+    "zod": "^4.3.6"
   }
 }
